# CS6001-HW3-Code

./: Makefile.am  README  configure.ac  main.cc
src/: Makefile.am  main.cc  polynomial.cc  polynomial.h
test/: Makefile.am  test.cc
