AC_INIT([multinv],[0.1])

AC_PREREQ([2.69])

AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([configure.ac])

AC_PROG_CXX

AX_REQUIRE_DEFINED([AX_COMPILER_FLAGS])
AX_COMPILER_FLAGS

AX_REQUIRE_DEFINED([AX_CXX_COMPILE_STDCXX_14])
AX_CXX_COMPILE_STDCXX_14

AM_INIT_AUTOMAKE([1.14 foreign])
AM_SILENT_RULES([yes])
AM_MAINTAINER_MODE([enable])

LT_LIB_M

AC_CONFIG_FILES([
	Makefile
	src/Makefile
])

AC_OUTPUT
